# splunksecrets

./: .bandit.yml  .coveragerc  .gitignore  .travis.yml  Justfile  README.rst  pylint.rc  pyproject.toml  requirements.txt  setup.py  splunksecrets.py  test.py  tests.py  tox.ini
.github/workflows/: publish.yml  tests.yml
splunksecrets/: __init__.py  cli.py  dbconnect.py  phantom.py  splunk.py
tests/: test_splunksecrets.py
