[project]
name = "splunksecrets"
version = "1.1.0"
description = "Command-line tools for working with secrets for Splunk products"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "cryptography>=43",
    "pcrypt"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
splunksecrets = "splunksecrets.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["splunksecrets"]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]